--- a/client/src/app/modules/settings/pages/groups-page/groups-page.component.scss
+++ b/client/src/app/modules/settings/pages/groups-page/groups-page.component.scss
@@ -462,6 +462,6 @@ h5 span.request-count {
   align-items: center;
   justify-content: center;
   position: absolute;
-  right: -20px;
-  top: -4px;
+  right: -16px;
+  top: -8px;
 }
